Version 2.2.4, released Nobember xxth, 2002
===========================================

- Added option "Menu text = xxxx" and "Find Menu text = xxxx"

Version 2.2.3, released Nobember 20th, 2002
===========================================

- Added "charset = ..." option
- Fixed bug with 10 attachments
- Added "Table align = ..." option
- Create data directory automatically
- Allow substitutions in attributes for searches, like "Author=$full_name"

Version 2.2.2, released Nobember 6th, 2002
==========================================

- "Select" command now works in non-english installations
- Made self registration work with global password file
- Fixed bugs when "Start page = ..." was present
- Added "Message height = ..." option
- Mail notification now distinguishes between new entry and updated entry
- Made "Allow <command> = <user>" work in localized versions
- Move whole thread when individual message is re-submitted
- Do not display commands which are not allowed for the current user
- All text files (preset text, welcome page, ...) can specified with an
  absolute path if they start with "/" (or "\" under Windows)

Version 2.2.1, released October 15th, 2002
==========================================

- elog program can now handle large attachments
- find result in threaded mode does not display messages multiple times

Version 2.2.0, released September 25th, 2002
============================================

- The default view of a logbook is now the page-wise listing of entries
- Added "Show last xxx" facility

Version 2.1.3, released September 16, 2002
==========================================

- Fixed wrong error "password file not found" if user doesn't exist
- Fixed double check boxes on select command for threaded display
- Ignore empty line in password files or lines without a ":"
- Fixed bug where wrong password caused login screen to re-appear
  even with correct password
- Don't display check box for edit with "Suppress email on edit = 1"